Changelog:

Key:
  + Addition
  = Fix
  ! Change
  - Removal

Version 1.7.0 | Tested on CB 1.7.10-R0.1 and mcMMO 1.5.01
 + Added localization!
 ! Major internal code cleanup
 = Fixed errors with NPCs

Version 1.6.12 | Tested on CB 1.6.4-R1.0 and mcMMO 1.4.07
 + Added hardcore death penalty prevention! Disable stat loss in certain WorldGuard regions
 + Added feature which prevents repairing high-level enchanted items
 + Added config reload command; /tftaddon reload
 ! Updated Metrics
 = Fixed minor typo in /tfthelp
 - Removed UpdateChecker

Version 1.6.11 | Tested on CB 1.5.1-R0.1 and mcMMO 1.4.04
 = Fixed a bug with the level up announcements
 + Added insta-break obsidian with SuperBreaker option

Version 1.6.10 | Tested on CB 1.4.7-R1.0 and mcMMO 1.4.00
 ! Now announces level ups only to nearby players by default, announce globally with Range: -1
 ! Disable notifications by setting 'Announce_Level_Up.Power_Level: 1000' to -1
 
Version 1.6.9 | Tested on CB 1.4.7-R1.0 and mcMMO 1.4.00
 = Updated to use the latest mcMMO API
 + Added new Repair Ability: Blacksmiths instinct
 + Added notifications when a player reaches a certain level milestone
 - Removed Fishermans diet

Version 1.5.6 | Tested on CB 1.3.1-R2.0 and mcMMO 1.3.11
 + Added Global cooldown system for "SunnyDay".
 ! SunnyDay messages are randomized.
 ! Config improvement: New Axes' "durability reducer" formula.
 ! Config improvement: Added some simple config toggles for "Fisherman's diet", "SunnyDay" and Axes "durability reducer".

Version 1.5.0 | Tested on CB 1.2.5-R4.0 and mcMMO 1.3.09
 = Fixed for mcMMO 1.3.09 (it broke due to an API change)

Version 1.4.1 | Tested on CB 1.2.5-R4.0 and mcMMO 1.3.08
 = Fixed levels being off. (Fisherman's diet)

Version 1.4.0 | Tested on CB 1.2.5-R4.0
 + Added a new passive ability for Fishing (Fisherman's diet)
 + Added Metrics to keep track of stats
 + Added global message when a player uses Sunny Day
 ! Changed the effects / sounds for Sunny Day
