@@ -79,10 +79,6 @@
             <url>http://repo.md-5.net/</url>
         </repository>
 		<repository>
-			<id>sk89q-repo</id>
-			<url>http://maven.sk89q.com/repo/</url>
-		</repository>
-		<repository>
 			<id>Plugin Metrics</id>
 			<url>http://repo.mcstats.org/content/repositories/public</url>
 		</repository>
@@ -102,13 +98,6 @@
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
-		<dependency>
-			<groupId>com.sk89q</groupId>
-			<artifactId>worldguard</artifactId>
-			<version>LATEST</version>
-			<scope>compile</scope>
-			<type>jar</type>
-		</dependency>
 		<dependency>
 			<groupId>org.mcstats.bukkit</groupId>
 			<artifactId>metrics</artifactId>
